--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -5,7 +5,7 @@
     margin: 2rem 4rem 2rem 4rem;
 }
 
-.title {
+.titleError {
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 700;
