--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,25 +1,22 @@
 .footer {
     background-color: #000000;
-    height: 209px;
+    height: 200px;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    bottom: 0;
     align-items: center;
-    flex-wrap: wrap;
-    margin: 10rem 0 0 0;
+    bottom: 0;
 }
 
 .logofooter {
-    padding-top: 4rem;
-    width: 36%;
+    padding-top: 2rem;
+    width: 100%;
+    height: 36.11px;
 }
 
 .textfooter {
     color: #ffffff;
-    margin: 0;
-    padding-top: 2.5rem;
-    padding-bottom: 1.2rem;
+    padding-top: 4rem;
+    padding-bottom: 3rem;
     font-size: 24px;
 }
 
